<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_round"
            android:layout_marginStart="29dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="32sp"
            android:textColor="@color/black"

            android:fontFamily="@font/inter_bold"
            android:layout_marginStart="38dp"
            android:layout_marginTop="126dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_your"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="163dp"
            android:fontFamily="@font/inter_semibold"
            android:lineSpacingExtra="4sp"
            android:text="@string/enter_your"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:src="@drawable/ellipse_green"
            app:layout_constraintTop_toBottomOf="@+id/enter_your"
            app:layout_constraintRight_toRightOf="parentparent"
            android:translationX="-215dp"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="322dp"
            android:src="@drawable/ellipse_green"
            app:layout_constraintTop_toBottomOf="@+id/enter_your"
            app:layout_constraintRight_toRightOf="parent"
            android:translationX="-32dp"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="26sp"
            android:textColor="@color/grey"
            android:layout_marginStart="43dp"
            android:layout_marginTop="167dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_your" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_edittext_layout"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_textview"
            android:translationY="-10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="26sp"
            android:textColor="@color/grey"
            android:layout_marginStart="45dp"
            android:layout_marginTop="67dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_edittext_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edittext_layout"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            app:boxStrokeWidth="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_textview"
            android:translationY="-10dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:background="@color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="229dp"
            android:layout_height="54dp"
            android:layout_marginTop="95dp"
            android:text="@string/login"
            android:textSize="36sp"
            app:backgroundTint="@color/black"
            android:fontFamily="@font/inder_regular"
            android:background="@drawable/rounded_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edittext_layout" />

        <TextView
            android:id="@+id/forgotten_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/forgotten_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/create_new_account_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotten_password_textview" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>