<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_round"
            android:layout_marginStart="29dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_button" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="83dp"
            android:src="@drawable/ellipse_pink"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:translationX="-90dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="336dp"
            android:src="@drawable/ellipse_pink"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:translationX="93dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/create_account_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:layout_marginStart="25dp"
            android:layout_marginTop="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_email_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_id"
            android:textSize="26sp"
            android:textColor="@color/grey"
            android:layout_marginStart="43dp"
            android:layout_marginTop="79dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_account_textview" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_email_edittext_layout"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_email_textview"
            android:translationY="-10dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/create_username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_username"
            android:textSize="26sp"
            android:textColor="@color/grey"
            android:layout_marginStart="43dp"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_email_edittext_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_username_edittext_layout"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_username_textview"
            android:translationY="-10dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/create_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_password"
            android:textSize="26sp"
            android:textColor="@color/grey"
            android:layout_marginStart="43dp"
            android:layout_marginTop="57dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_username_edittext_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_password_edittext_layout"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_password_textview"
            android:translationY="-10dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            android:layout_width="229dp"
            android:layout_height="54dp"
            android:layout_marginTop="125dp"
            android:text="@string/sign_up"
            android:textSize="36sp"
            app:backgroundTint="@color/black"
            android:fontFamily="@font/inder_regular"
            android:background="@drawable/rounded_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_password_edittext_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>